--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ body {
 }
 @media (max-width: 576px) {
   .main {
-    background-size: contain;
+    background-size: cover;
     padding: 1rem;
   }
 }
