--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -24,7 +24,7 @@
     position: relative;
   }
   @include mixins.respond-to(lg) {
-    background-position: top;
+    background-size: cover;
   }
 
   @include mixins.respond-to(sm) {
