--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -5,13 +5,9 @@ $secondary-color: #0d0c0c;
 $link-color: rgba(195, 128, 220, 0.929);
 $project-color: rgba(255, 255, 255, 0.6);
 $project-color2: white;
+$container-bg: rgba(17, 16, 16, 0.525);
 
 /*fonts*/
 $font-main: "Special Gothic", sans-serif;
 
 $navbar-radius: 16px;
-
-$breakpoint-sm: 576px;
-$breakpoint-md: 768px;
-$breakpoint-lg: 1024px;
-$breakpoint-xl: 1280px;
