--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -22,6 +22,7 @@
     height: 100vh;
     z-index: 1;
     position: relative;
+    background-color: vars.$container-bg;
   }
   @include mixins.respond-to(lg) {
     background-size: cover;
