--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -15,20 +15,24 @@
 }
 
 @mixin respond-to($breakpoint) {
-  @if $breakpoint == sm {
-    @media (max-width: 576px) {
+  @if $breakpoint == xs {
+    @media (max-width: 575.98px) {
+      @content;
+    }
+  } @else if $breakpoint == sm {
+    @media (max-width: 767.98px) {
       @content;
     }
   } @else if $breakpoint == md {
-    @media (max-width: 768px) {
+    @media (max-width: 991.98px) {
       @content;
     }
   } @else if $breakpoint == lg {
-    @media (max-width: 1024px) {
+    @media (max-width: 1199.98px) {
       @content;
     }
   } @else if $breakpoint == xl {
-    @media (max-width: 1280px) {
+    @media (max-width: 1399.98px) {
       @content;
     }
   }
