--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -40,18 +40,22 @@
   }
 }
 /*arreglos para el responsive de navbar*/
-@media (min-width: 991px) {
-  .nav-link::before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
-    height: 2px;
-    background-color: vars.$link-color;
-    visibility: hidden;
-    transition: background-color 0.3s ease-in-out;
+@include mixins.respond-to(sm) {
+  @include mixins.respond-to(md) {
+    @include mixins.respond-to(lg) {
+      .nav-link::before {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 100%;
+        height: 2px;
+        background-color: vars.$link-color;
+        visibility: hidden;
+        transition: background-color 0.3s ease-in-out;
+      }
+    }
   }
 }
 
