--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ body {
   color: #0d0c0c;
   background-color: rgb(179, 186, 241);
   height: fit-content;
+  width: fit-content;
   padding: 30px;
 }
 
@@ -40,7 +41,7 @@ body {
 }
 
 /*arreglos para el responsive de footer*/
-@media (max-width: 1199.98px) {
+@media (max-width: 575.98px) and (max-width: 767.98px) {
   .footer__link::before {
     content: "";
     position: absolute;
@@ -75,12 +76,6 @@ body {
   right: 0;
   bottom: 0;
   left: 0;
-}
-.main .container {
-  height: 100vh;
-  z-index: 1;
-  position: relative;
-  background-color: rgba(17, 16, 16, 0.525);
 }
 @media (max-width: 1199.98px) {
   .main {
@@ -412,7 +407,7 @@ textarea::placeholder {
     height: auto;
   }
 }
-@media (max-width: 767.98px) and (max-width: 991.98px) and (max-width: 1199.98px) {
+@media (max-width: 575.98px) and (max-width: 767.98px) and (max-width: 991.98px) and (max-width: 1199.98px) {
   .projects {
     display: flex;
     flex-direction: column;
@@ -425,6 +420,20 @@ textarea::placeholder {
   }
 }
 /*fin de modificaciones en proyectos*/
+.index__container {
+  height: 100vh;
+  z-index: 1;
+  position: relative;
+  background-color: rgba(17, 16, 16, 0.525);
+}
+
+.index__image {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  height: 250px;
+  border-radius: 25px;
+}
+
 /*@use "../node_modules/bootstrap/scss/bootstrap";*/
 
 /*# sourceMappingURL=style.css.map */
