--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -35,5 +35,12 @@
     @media (max-width: 1399.98px) {
       @content;
     }
+  } @else if $breakpoint == xxl {
+    @media (max-width: 100000px) {
+      // Puedes ajustar este valor si deseas
+      @content;
+    }
+  } @else {
+    @warn "Breakpoint '#{$breakpoint}' no está definido.";
   }
 }
