--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -14,6 +14,7 @@
   color: vars.$secondary-color;
   background-color: vars.$primary-color;
   height: fit-content;
+  width: fit-content;
   padding: 30px;
 }
 
@@ -29,21 +30,22 @@
   }
 }
 /*arreglos para el responsive de footer*/
-@include mixins.respond-to(lg) {
-  .footer__link::before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
-    height: 2px;
-    background-color: vars.$link-color;
-    visibility: hidden;
-    transition: 0.3s ease-in-out;
+@include mixins.respond-to(xs) {
+  @include mixins.respond-to(sm) {
+    .footer__link::before {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 100%;
+      height: 2px;
+      background-color: vars.$link-color;
+      visibility: hidden;
+      transition: 0.3s ease-in-out;
+    }
   }
 }
-
 .footer__link:hover::before,
 .footer__link:active::before {
   width: 100%;
