--- a/css/style.css
+++ b/css/style.css
@@ -434,6 +434,16 @@ textarea::placeholder {
   border-radius: 25px;
 }
 
+@media (max-width: 1199.98px) {
+  .index__image {
+    height: 150px;
+  }
+}
+@media (max-width: 767.98px) {
+  .index__image {
+    height: 100px;
+  }
+}
 /*@use "../node_modules/bootstrap/scss/bootstrap";*/
 
 /*# sourceMappingURL=style.css.map */
