--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -2,6 +2,7 @@
 @forward "contact";
 @forward "designs";
 @forward "projects";
+@use "../abstracts/mixins";
 @use "../abstracts/variables" as vars;
 
 .index__container {
@@ -16,4 +17,16 @@
   margin-bottom: 50px;
   height: 250px;
   border-radius: 25px;
+}
+
+@include mixins.respond-to(lg) {
+  .index__image {
+    height: 150px;
+  }
+}
+
+@include mixins.respond-to(sm) {
+  .index__image {
+    height: 100px;
+  }
 }
