--- a/css/style.css
+++ b/css/style.css
@@ -196,21 +196,64 @@ body {
   max-width: 1280px;
   margin: 0 auto;
   padding: 1rem;
+  z-index: 1;
+  position: relative;
+  background-color: rgba(17, 16, 16, 0.525);
 }
 
 /*modificaciones en contacto*/
-.contact .contact__item .contact__form {
+.contact {
+  margin-top: 70px;
+}
+.contact .contact__form {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   align-content: center;
   gap: 1rem;
 }
+@media (max-width: 991.98px) {
+  .contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+    gap: 1rem;
+  }
+}
+@media (max-width: 767.98px) {
+  .contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+    gap: 1rem;
+  }
+}
+
+.contact__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .contact__img {
+  height: 400px;
   margin-top: 50px;
-  margin-left: 40px;
+  border-radius: 30px;
+}
+@media (max-width: 991.98px) {
+  .contact__img {
+    height: 250px;
+  }
+}
+@media (max-width: 767.98px) {
+  .contact__img {
+    height: 150px;
+  }
 }
 
 .contact__form-fieldset {
