--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -2,21 +2,51 @@
 @use "../abstracts/variables" as vars;
 /*modificaciones en contacto*/
 .contact {
-  .contact__item {
-    .contact__form {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-evenly;
-      align-items: center;
-      align-content: center;
-      gap: 1rem;
-    }
+  .contact__form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    gap: 1rem;
+  }
+  margin-top: 70px;
+  @include mixins.respond-to(md) {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+    gap: 1rem;
+  }
+
+  @include mixins.respond-to(sm) {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+    gap: 1rem;
   }
 }
 
+.contact__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .contact__img {
+  height: 400px;
   margin-top: 50px;
-  margin-left: 40px;
+  border-radius: 30px;
+  @include mixins.respond-to(md) {
+    height: 250px;
+  }
+
+  @include mixins.respond-to(sm) {
+    height: 150px;
+  }
 }
 .contact__form-fieldset {
   display: flex;
