--- a/css/style.css
+++ b/css/style.css
@@ -327,6 +327,26 @@ textarea::placeholder {
   align-items: center;
   justify-content: center;
 }
+@media (max-width: 991.98px) {
+  .designs {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+    gap: 1rem;
+  }
+}
+@media (max-width: 767.98px) {
+  .designs {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+    gap: 1rem;
+  }
+}
 
 .design__item--1 {
   grid-area: diseño1;
@@ -377,24 +397,6 @@ textarea::placeholder {
   text-align: center;
 }
 
-@media (max-width: 1024px) {
-  .main {
-    font-size: 10px;
-  }
-  .designs {
-    position: sticky;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    align-items: center;
-    align-content: flex-end;
-  }
-  .design__item {
-    position: relative;
-    top: 100px;
-    text-align: center;
-  }
-}
 /*fin de modificaciones en designs*/
 /*Proyectos*/
 .projects {
