--- a/scss/pages/_designs.scss
+++ b/scss/pages/_designs.scss
@@ -13,6 +13,23 @@
   align-content: center;
   align-items: center;
   justify-content: center;
+  @include mixins.respond-to(md) {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+    gap: 1rem;
+  }
+
+  @include mixins.respond-to(sm) {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+    gap: 1rem;
+  }
 }
 
 .design__item--1 {
@@ -57,22 +74,4 @@
   text-align: center;
 }
 
-@media (max-width: 1024px) {
-  .main {
-    font-size: 10px;
-  }
-  .designs {
-    position: sticky;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    align-items: center;
-    align-content: flex-end;
-  }
-  .design__item {
-    position: relative;
-    top: 100px;
-    text-align: center;
-  }
-}
 /*fin de modificaciones en designs*/
