--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ body {
   font-size: 15px;
 }
 @media (max-width: 991.98px) {
-  .about .about__section {
+  .about {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -161,7 +161,7 @@ body {
   }
 }
 @media (max-width: 767.98px) {
-  .about .about__section {
+  .about {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -171,7 +171,7 @@ body {
   }
 }
 @media (max-width: 575.98px) {
-  .about .about__section {
+  .about {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -331,7 +331,7 @@ textarea::placeholder {
   .designs {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     align-content: center;
     gap: 1rem;
@@ -341,7 +341,7 @@ textarea::placeholder {
   .designs {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     align-content: center;
     gap: 1rem;
