--- a/css/style.css
+++ b/css/style.css
@@ -7,48 +7,44 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+
 body {
   color: white;
   font-family: "Special Gothic", sans-serif;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.main {
+  flex: 1;
 }
 
 /*styles de footer*/
 .footer {
   background-color: rgb(179, 186, 241);
-}
-@media (max-width: 575.98px) and (max-width: 767.98px) {
-  .footer {
-    background-color: rgb(179, 186, 241);
-    height: fit-content;
-    width: fit-content;
-    padding: 30px;
-  }
+  width: 100%;
+  padding: 30px 20px;
+  color: #0d0c0c;
 }
 
 .footer__sec {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  column-gap: 50px;
-  justify-content: space-between;
-  align-content: baseline;
-  color: #0d0c0c;
-  background-color: rgb(179, 186, 241);
-  height: fit-content;
-  width: fit-content;
-  padding: 30px;
+  gap: 30px;
+  max-width: 1200px;
+  margin: 0 auto;
+  width: 100%;
 }
-@media (max-width: 575.98px) and (max-width: 767.98px) {
+@media (max-width: 767.98px) {
   .footer__sec {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 50px;
-    justify-content: space-between;
-    align-content: baseline;
-    color: #0d0c0c;
-    background-color: rgb(179, 186, 241);
-    height: fit-content;
-    width: fit-content;
-    padding: 30px;
+    grid-template-columns: 1fr;
+    text-align: center;
   }
 }
 
@@ -63,7 +59,7 @@ body {
 }
 
 /*arreglos para el responsive de footer*/
-@media (max-width: 575.98px) and (max-width: 767.98px) {
+@media (max-width: 767.98px) {
   .footer__link::before {
     content: "";
     position: absolute;
@@ -90,24 +86,22 @@ body {
   width: 100%;
   position: relative;
   padding: 30px;
+  display: flex;
+  flex-direction: column;
 }
 .main::before {
   content: "";
+  position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
+  z-index: 0;
 }
-@media (max-width: 1199.98px) {
-  .main {
-    background-size: cover;
-  }
-}
-@media (max-width: 767.98px) {
-  .main {
-    background-size: cover;
-    padding: 1rem;
-  }
+.main .container {
+  position: relative;
+  z-index: 1;
+  flex-grow: 1;
 }
 
 /*Modificaciones en el Bootstrap para navbar*/
