--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,42 +1,25 @@
 @use "../abstracts/mixins";
 @use "../abstracts/variables" as vars;
 /*styles de footer*/
+
 .footer {
   background-color: vars.$primary-color;
-  @include mixins.respond-to(xs) {
-    @include mixins.respond-to(sm) {
-      background-color: vars.$primary-color;
-      height: fit-content;
-      width: fit-content;
-      padding: 30px;
-    }
-  }
+  width: 100%;
+  padding: 30px 20px;
+  color: vars.$secondary-color;
 }
 
 .footer__sec {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  column-gap: 50px;
-  justify-content: space-between;
-  align-content: baseline;
-  color: vars.$secondary-color;
-  background-color: vars.$primary-color;
-  height: fit-content;
-  width: fit-content;
-  padding: 30px;
-  @include mixins.respond-to(xs) {
-    @include mixins.respond-to(sm) {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      column-gap: 50px;
-      justify-content: space-between;
-      align-content: baseline;
-      color: vars.$secondary-color;
-      background-color: vars.$primary-color;
-      height: fit-content;
-      width: fit-content;
-      padding: 30px;
-    }
+  gap: 30px;
+  max-width: 1200px;
+  margin: 0 auto;
+  width: 100%;
+
+  @include mixins.respond-to(sm) {
+    grid-template-columns: 1fr;
+    text-align: center;
   }
 }
 
@@ -52,20 +35,18 @@
   }
 }
 /*arreglos para el responsive de footer*/
-@include mixins.respond-to(xs) {
-  @include mixins.respond-to(sm) {
-    .footer__link::before {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 100%;
-      height: 2px;
-      background-color: vars.$link-color;
-      visibility: hidden;
-      transition: 0.3s ease-in-out;
-    }
+@include mixins.respond-to(sm) {
+  .footer__link::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    height: 2px;
+    background-color: vars.$link-color;
+    visibility: hidden;
+    transition: 0.3s ease-in-out;
   }
 }
 .footer__link:hover::before,
