--- a/scss/pages/_designs.scss
+++ b/scss/pages/_designs.scss
@@ -71,7 +71,10 @@
 }
 
 .design__img {
-  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  height: 250px;
+  border-radius: 25px;
 }
 
 /*fin de modificaciones en designs*/
