--- a/css/style.css
+++ b/css/style.css
@@ -41,12 +41,6 @@ body {
   margin: 0 auto;
   width: 100%;
 }
-@media (max-width: 767.98px) {
-  .footer__sec {
-    grid-template-columns: 1fr;
-    text-align: center;
-  }
-}
 
 .footer__link {
   text-decoration: none;
@@ -102,6 +96,11 @@ body {
   position: relative;
   z-index: 1;
   flex-grow: 1;
+  width: 100%;
+  max-width: 1280px;
+  margin-top: 70px;
+  padding: 1rem;
+  background-color: rgba(17, 16, 16, 0.525);
 }
 
 /*Modificaciones en el Bootstrap para navbar*/
@@ -234,6 +233,7 @@ body {
   text-align: center;
 }
 
+/*
 .container {
   width: 100%;
   max-width: 1280px;
@@ -241,9 +241,8 @@ body {
   padding: 1rem;
   z-index: 1;
   position: relative;
-  background-color: rgba(17, 16, 16, 0.525);
-}
-
+  background-color: vars.$container-bg;
+}*/
 /*modificaciones en contacto*/
 .contact {
   margin-top: 70px;
@@ -410,7 +409,10 @@ textarea::placeholder {
 }
 
 .design__img {
-  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  height: 250px;
+  border-radius: 25px;
 }
 
 /*fin de modificaciones en designs*/
