--- a/scss/pages/_about.scss
+++ b/scss/pages/_about.scss
@@ -80,7 +80,7 @@
     text-align: center;
   }
 }
-
+/*
 .container {
   width: 100%;
   max-width: 1280px;
@@ -89,4 +89,4 @@
   z-index: 1;
   position: relative;
   background-color: vars.$container-bg;
-}
+}*/
