--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 /*colores*/
 /*fonts*/
+/*navbar*/
 * {
   margin: 0;
   padding: 0;
@@ -157,11 +158,10 @@ body {
 .about {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: auto auto auto auto;
+  grid-template-rows: auto;
   grid-template-areas: "parte1 parte1" "parte2 parte2" "parte3 parte3" "parte4 parte5";
   justify-items: center;
   justify-content: center;
-  align-content: center;
   row-gap: 40px;
   font-size: 15px;
 }
@@ -195,11 +195,6 @@ body {
   }
 }
 
-.about__title {
-  font-size: 2.5rem;
-  margin-bottom: 20px;
-}
-
 /* areas del grid*/
 .about__section--parte1 {
   grid-area: parte1;
@@ -229,20 +224,21 @@ body {
   grid-area: parte5;
 }
 
-.about__texto .about__subt {
+.about__title {
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+}
+.about__title .about__subt {
   text-align: center;
 }
 
-/*
-.container {
-  width: 100%;
-  max-width: 1280px;
-  margin-top: 70px;
-  padding: 1rem;
-  z-index: 1;
-  position: relative;
-  background-color: vars.$container-bg;
-}*/
+.about__img {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  height: 250px;
+  border-radius: 25px;
+}
+
 /*modificaciones en contacto*/
 .contact {
   margin-top: 70px;
@@ -385,7 +381,6 @@ textarea::placeholder {
 
 .design__item {
   position: relative;
-  top: 100px;
   text-align: center;
 }
 
