--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -14,6 +14,13 @@
   cursor: pointer;
 }
 
+@mixin img-style {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  height: 250px;
+  border-radius: 25px;
+}
+
 @mixin respond-to($breakpoint) {
   @if $breakpoint == xs {
     @media (max-width: 575.98px) {
@@ -29,15 +36,6 @@
     }
   } @else if $breakpoint == lg {
     @media (max-width: 1199.98px) {
-      @content;
-    }
-  } @else if $breakpoint == xl {
-    @media (max-width: 1399.98px) {
-      @content;
-    }
-  } @else if $breakpoint == xxl {
-    @media (max-width: 100000px) {
-      // Puedes ajustar este valor si deseas
       @content;
     }
   } @else {
