--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ body {
   justify-items: center;
   justify-content: center;
   row-gap: 40px;
-  font-size: 15px;
+  font-size: 18px;
 }
 @media (max-width: 991.98px) {
   .about {
@@ -207,6 +207,7 @@ body {
 .about__section--parte2 {
   grid-area: parte2;
   margin-bottom: 10px;
+  padding: 40px;
 }
 
 .about__section--parte3 {
