--- a/scss/pages/_about.scss
+++ b/scss/pages/_about.scss
@@ -14,7 +14,7 @@
   justify-items: center;
   justify-content: center;
   row-gap: 40px;
-  font-size: 15px;
+  font-size: 18px;
   @include mixins.respond-to(md) {
     display: flex;
     flex-direction: column;
@@ -53,6 +53,7 @@
 .about__section--parte2 {
   grid-area: parte2;
   margin-bottom: 10px;
+  padding: 40px;
 }
 
 .about__section--parte3 {
